[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Grave.gd" type="Script" id=1]
[ext_resource path="res://scenes/components/CardNumber.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/card/Duel_Masters_cardback.png" type="Texture" id=3]

[node name="Grave" type="Control"]
script = ExtResource( 1 )

[node name="GraveButton" type="TextureButton" parent="."]
margin_right = 177.0
margin_bottom = 248.0
texture_normal = ExtResource( 3 )
expand = true

[node name="GraveSize" parent="GraveButton" instance=ExtResource( 2 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Graveyard" type="Node" parent="."]

[connection signal="gui_input" from="GraveButton" to="." method="_on_GraveButton_gui_input"]
